--- a/client/pom.xml
+++ b/client/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
