--- a/client/pom.xml
+++ b/client/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>joda-time</artifactId>
             <version>[2.0,2.2)</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>[4.0,4.10)</version>
+        </dependency>
     </dependencies>
 </project>
