--- a/client/pom.xml
+++ b/client/pom.xml
@@ -29,5 +29,11 @@
             <artifactId>commons-io</artifactId>
             <version>[1.3.0,1.4.0)</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
