--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,16 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcprov-jdk15on</artifactId>
+		    <version>1.54</version>
+  	    </dependency>
+  	    <dependency>
+	    	<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+    	</dependency>
     </dependencies>
 
     <profiles>
